rezolvat issues Luisa

--- a/src/pages/instruments/08_pfq_en.html
+++ b/src/pages/instruments/08_pfq_en.html
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PF1m<. Mahalla</div>
+                <div>PF1m. Mahalla</div>
                 <div>
                     <select id="pf1m" name="pf1m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
@@ -435,7 +435,7 @@
             </div>
 
             <div id="c1e" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
-                <div>Child #1 cn. What complex needs?</div>
+                <div>Child #1 e. Where did the child come from?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <select id="fc4_c1e" name="fc4_c1e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
@@ -543,7 +543,7 @@
             </div>
 
             <div id="c2e" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
-                <div>Child #2 cn. What complex needs?</div>
+                <div>Child #2 e. Where did the child come from?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <select id="fc4_c2e" name="fc4_c2e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
@@ -652,7 +652,7 @@
             </div>
 
             <div id="c3e" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
-                <div>Child #3 cn. What complex needs?</div>
+                <div>Child #3 e. Where did the child come from?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <select id="fc4_c3e" name="fc4_c3e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
@@ -762,7 +762,7 @@
             </div>
 
             <div id="c4e" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
-                <div>Child #4 cn. What complex needs?</div>
+                <div>Child #4 e. Where did the child come from?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <select id="fc4_c4e" name="fc4_c4e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
@@ -871,7 +871,7 @@
             </div>
 
             <div id="c5e" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
-                <div>Child #5 cn. What complex needs?</div>
+                <div>Child #5 e. Where did the child come from?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <select id="fc4_c5e" name="fc4_c5e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
@@ -980,7 +980,7 @@
             </div>
 
             <div id="c6e" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
-                <div>Child #6 cn. What complex needs?</div>
+                <div>Child #6 e. Where did the child come from?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <select id="fc4_c6e" name="fc4_c6e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
@@ -1089,7 +1089,7 @@
             </div>
 
             <div id="c7e" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
-                <div>Child #7 cn. What complex needs?</div>
+                <div>Child #7 e. Where did the child come from?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <select id="fc4_c7e" name="fc4_c7e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
@@ -1198,7 +1198,7 @@
             </div>
 
             <div id="c8e" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
-                <div>Child #8 cn. What complex needs?</div>
+                <div>Child #8 e. Where did the child come from?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <select id="fc4_c8e" name="fc4_c8e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
@@ -1307,7 +1307,7 @@
             </div>
 
             <div id="c9e" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
-                <div>Child #9 cn. What complex needs?</div>
+                <div>Child #9 e. Where did the child come from?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <select id="fc4_c9e" name="fc4_c9e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
@@ -1416,7 +1416,7 @@
             </div>
 
             <div id="c10e" class="hidden grid grid-cols-2 gap-4 items-center mt-6">
-                <div>Child #10 cn. What complex needs?</div>
+                <div>Child #10 e. Where did the child come from?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <select id="fc4_c10e" name="fc4_c10e" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
