--- a/src/pages/instruments/05a_tqyp_en.html
+++ b/src/pages/instruments/05a_tqyp_en.html
@@ -383,7 +383,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>PTR8m. Mahalla</div>
+                <div>m. Mahalla</div>
                 <div>
                     <select id="ptr8m" name="ptr8m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
