--- a/src/pages/instruments/02_cibs_ru.html
+++ b/src/pages/instruments/02_cibs_ru.html
@@ -1129,7 +1129,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>CM11m. Махалли</div>
+                <div>m. Махалли</div>
                 <div>
                     <select id="cm11m" name="cm11m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- выбрать ---</option>
@@ -1657,7 +1657,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>CT11m. Махалли</div>
+                <div>m. Махалли</div>
                 <div>
                     <select id="ct11m" name="ct11m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- выбрать ---</option>
@@ -2145,7 +2145,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>CG11m. Махалли</div>
+                <div>m. Махалли</div>
                 <div>
                     <select id="cg11m" name="cg11m" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- выбрать ---</option>
