modificari template Luisa

--- a/src/pages/instruments/08_pfq_uz.html
+++ b/src/pages/instruments/08_pfq_uz.html
@@ -503,11 +503,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c2d-1" type="radio" value="1" name="fc4_c2d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c2d-1" class="ms-2 text-sm text-gray-900">1. Erkak</label>
+                        <label for="fc4_c2d-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c2d-2" type="radio" value="2" name="fc4_c2d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c2d-2" class="ms-2 text-sm text-gray-900">2. Ayol</label>
+                        <label for="fc4_c2d-2" class="ms-2 text-sm text-gray-900">2. Yo'q</label>
                     </div>
                 </div>
             </div>
@@ -612,11 +612,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c3d-1" type="radio" value="1" name="fc4_c3d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c3d-1" class="ms-2 text-sm text-gray-900">1. Erkak</label>
+                        <label for="fc4_c3d-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c3d-2" type="radio" value="2" name="fc4_c3d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c3d-2" class="ms-2 text-sm text-gray-900">2. Ayol</label>
+                        <label for="fc4_c3d-2" class="ms-2 text-sm text-gray-900">2. Yo'q</label>
                     </div>
                 </div>
             </div>
@@ -722,11 +722,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c4d-1" type="radio" value="1" name="fc4_c4d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c4d-1" class="ms-2 text-sm text-gray-900">1. Erkak</label>
+                        <label for="fc4_c4d-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c4d-2" type="radio" value="2" name="fc4_c4d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c4d-2" class="ms-2 text-sm text-gray-900">2. Ayol</label>
+                        <label for="fc4_c4d-2" class="ms-2 text-sm text-gray-900">2. Yo'q</label>
                     </div>
                 </div>
             </div>
@@ -831,11 +831,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c5d-1" type="radio" value="1" name="fc4_c5d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c5d-1" class="ms-2 text-sm text-gray-900">1. Erkak</label>
+                        <label for="fc4_c5d-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c5d-2" type="radio" value="2" name="fc4_c5d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c5d-2" class="ms-2 text-sm text-gray-900">2. Ayol</label>
+                        <label for="fc4_c5d-2" class="ms-2 text-sm text-gray-900">2. Yo'q</label>
                     </div>
                 </div>
             </div>
@@ -940,11 +940,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c6d-1" type="radio" value="1" name="fc4_c6d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c6d-1" class="ms-2 text-sm text-gray-900">1. Erkak</label>
+                        <label for="fc4_c6d-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c6d-2" type="radio" value="2" name="fc4_c6d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c6d-2" class="ms-2 text-sm text-gray-900">2. Ayol</label>
+                        <label for="fc4_c6d-2" class="ms-2 text-sm text-gray-900">2. Yo'q</label>
                     </div>
                 </div>
             </div>
@@ -1049,11 +1049,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c7d-1" type="radio" value="1" name="fc4_c7d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c7d-1" class="ms-2 text-sm text-gray-900">1. Erkak</label>
+                        <label for="fc4_c7d-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c7d-2" type="radio" value="2" name="fc4_c7d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c7d-2" class="ms-2 text-sm text-gray-900">2. Ayol</label>
+                        <label for="fc4_c7d-2" class="ms-2 text-sm text-gray-900">2. Yo'q</label>
                     </div>
                 </div>
             </div>
@@ -1158,11 +1158,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c8d-1" type="radio" value="1" name="fc4_c8d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c8d-1" class="ms-2 text-sm text-gray-900">1. Erkak</label>
+                        <label for="fc4_c8d-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c8d-2" type="radio" value="2" name="fc4_c8d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c8d-2" class="ms-2 text-sm text-gray-900">2. Ayol</label>
+                        <label for="fc4_c8d-2" class="ms-2 text-sm text-gray-900">2. Yo'q</label>
                     </div>
                 </div>
             </div>
@@ -1267,11 +1267,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c9d-1" type="radio" value="1" name="fc4_c9d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c9d-1" class="ms-2 text-sm text-gray-900">1. Erkak</label>
+                        <label for="fc4_c9d-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c9d-2" type="radio" value="2" name="fc4_c9d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c9d-2" class="ms-2 text-sm text-gray-900">2. Ayol</label>
+                        <label for="fc4_c9d-2" class="ms-2 text-sm text-gray-900">2. Yo'q</label>
                     </div>
                 </div>
             </div>
@@ -1376,11 +1376,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c10d-1" type="radio" value="1" name="fc4_c10d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c10d-1" class="ms-2 text-sm text-gray-900">1. Erkak</label>
+                        <label for="fc4_c10d-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c10d-2" type="radio" value="2" name="fc4_c10d" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c10d-2" class="ms-2 text-sm text-gray-900">2. Ayol</label>
+                        <label for="fc4_c10d-2" class="ms-2 text-sm text-gray-900">2. Yo'q</label>
                     </div>
                 </div>
             </div>
